# iced_fontello

./: Cargo.toml  README.md
.github/workflows/: test.yml
example/: Cargo.toml  build.rs
example/fonts/: enum-icons.toml  example-icons.toml  fn-icons.toml
example/src/: icon.rs  main.rs
example/src/icon/: icon_enum.rs  icon_fn.rs  mod.rs
examples/icons/: Cargo.toml  build.rs
examples/icons/fonts/: example-icons.toml
examples/icons/src/: icon.rs  main.rs
examples/textinput/: Cargo.toml
examples/textinput/fonts/: example-icons.toml
examples/textinput/src/: icon.rs  main.rs
src/: lib.rs  svg_parser.rs
