[package]
name = "iced_fontello"
version = "0.13.0"
edition = "2021"
description = "Generate type-safe icon fonts for `iced` at compile time"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "2"

[workspace]
members = ["example"]

[workspace.dependencies]
iced_fontello = { version = "0.13", path = "." }
